<resources>
    <string name="app_name">RojakRecycle</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_learn">Learn</string>
    <string name="title_recycle">Recycle</string>
    <string name="title_profile">Profile</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_activity_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="RojakRecycle">RojakRecycle</string>
</resources>


