<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:background="@drawable/login_bk"
    android:focusableInTouchMode="true">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/loginHeader"
            android:text="Login"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:textColor="@color/black"
                android:id="@+id/editTextEmail"
                style="@style/modifiedEditText"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:textColor="@color/black"
                android:id="@+id/editTextPassword"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/cirLoginButton"
            style="@style/loginButton"
            android:text="Login"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <Button
            style="@style/parent"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:id="@+id/Sign_up_hypertext"
            android:text="@string/login_signup_hint"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <Button
            android:id="@+id/cirSocialLogin"
            style="@style/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="Social Account Login" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
